# Rust_SeaORM_Postgres

./: Cargo.toml  README.md
app/: Cargo.toml
app/src/: main.rs
entity/src/: users.rs
migration/: Cargo.toml
migration/src/: m20220101_000001_create_table.rs  main.rs
